[package]
name = "ksnotify"
authors = ["hirosassa <hiro.sassa@gmail.com>"]
description = "A CLI command to parse kubectl diff result and notify it to GitLab"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gitlab = "0.1700.1"
handlebars = "4.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0.43"
strum = "0.21"
strum_macros = "0.21"
thiserror = "1.0"
regex = "1"
itertools = "0.10.5"
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4.0.18", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
log = "0.4"
env_logger = "0.9"
octocrab = "0.44.0"
smol = "2.0.2"
