[package]
name = "ksnotify"
authors = ["hirosassa <hiro.sassa@gmail.com>"]
description = "A CLI command to parse kubectl diff result and notify it to GitLab"
version = "0.0.0" # This will be replaced by version tag by goreleaser release.
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gitlab = { version = "0.1809.0", features = ["client_pem"] }
handlebars = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
anyhow = "1.0.43"
strum = "0.28"
strum_macros = "0.28"
regex = "1"
itertools = "0.14.0"
clap = { version = "4.0.18", features = ["derive"] }
clap-verbosity-flag = "3"
log = "0.4"
env_logger = "0.11.9"
octocrab = "0.49.5"
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3"
